@@ -8,6 +8,7 @@ Newest entry first; every non-approval is recorded, including one a repair later
 **Coverage improvement removed baseline behavior and counted an asserted failure**
 
 The contribution deleted the existing SCRAM provider behavior test from KafkaClientsTest, contrary to the no-weakening rule, and added reportsUnavailableRawMessageInfoFields, which deliberately supplied a nonexistent protobuf field and asserted the resulting RuntimeException while exercising the reflective call site. That is coverage bought by asserting breakage under FS-contribution-contract.4.4 / FS-test-contract.2.6.
+
 ## 2026-09-20 — org.aspectj:aspectjweaver:1.9.21.1 (#9373)
 
 **Test-created native flag and weakened runtime coverage**
@@ -19,6 +20,12 @@ The contribution rewrote a test class file to preview bytecode and added --enabl
 **Generated Java test class was not public**
 
 The added Checker_qualTest top-level class was declared package-private, violating FS-test-contract.1.2, which requires every top-level test class to be public. The violation was wholly within the target coordinate's new test source and was repairable under FS-contribution-contract.5.1.
+
+## 2026-09-18 — org.xerial.snappy:snappy-java:1.1.0.1 (#10048)
+
+**Native Image coverage was bypassed by test-created runtime class loading**
+
+The original test created child-loaded copies of the library and test providers with URLClassLoader.defineClass, then wrapped the entire library exercise in NativeImageSupport.runToleratingUnsupportedFeature. Because the unsupported operation came from the test harness rather than unavoidable library behavior, Native Image could accept the class-definition failure before executing the Snappy assertions, violating the native-execution and no-runtime-class-definition rules. The accompanying --add-opens native build flag was also unnecessary for the repaired public-API path.
 
 ## 2026-09-18 — io.micronaut:micronaut-http-client-core:5.1.11 (#10079)
 
